--- a/app/user/templates/user/following.html
+++ b/app/user/templates/user/following.html
@@ -1,4 +1,5 @@
 {% extends 'user/detail.html' %}
+
 {% block user_details %}
 <div class="col-sm-9">
   <div class="row">
@@ -27,7 +28,7 @@
             {% endif %}
 
           </div>
-          <p class="card-bio">BIO HERE</p>
+          <p class="card-bio">{{ followed_user.bio }}</p>
         </div>
       </div>
     </div>
