--- a/app/message/templates/message/show.html
+++ b/app/message/templates/message/show.html
@@ -29,7 +29,20 @@
             {% endif %}
             {% endif %}
           </div>
-          <p class="single-message">{{ message.text }}</p>
+          <div class="single-message position-relative">
+            {% if message.user_id != g.user.id%}
+            <form method="POST" class="position-absolute top-100" action="/users/add_like/{{ message.id }}"
+              id="messages-form">
+              <button class="
+                        btn 
+                        btn-sm 
+                        {{'btn-primary' if message in g.user.likes else 'btn-secondary'}}">
+                <i class="fa fa-thumbs-up"></i>
+              </button>
+            </form>
+            {% endif %}
+            {{ message.text }}
+          </div>
           <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
         </div>
       </li>
