--- a/app/user/templates/user/show.html
+++ b/app/user/templates/user/show.html
@@ -16,6 +16,16 @@
         <a href="/users/{{ user.id }}">@{{ user.username }}</a>
         <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
         <p>{{ message.text }}</p>
+        {% if message.user_id != g.user.id%}
+        <form method="POST" action="/users/add_like/{{ message.id }}" id="messages-form">
+          <button class="
+                  btn 
+                  btn-sm 
+                  {{'btn-primary' if message in g.user.likes else 'btn-secondary'}}">
+            <i class="fa fa-thumbs-up"></i>
+          </button>
+        </form>
+        {% endif %}
       </div>
     </li>
 
