--- a/app/user/templates/user/show.html
+++ b/app/user/templates/user/show.html
@@ -6,27 +6,28 @@
     {% for message in messages %}
 
     <li class="list-group-item">
-      <a href="/messages/{{ message.id }}" class="message-link" />
+      <a href="/messages/{{ message.id }}" class="message-link">
 
-      <a href="/users/{{ user.id }}">
-        <img src="{{ user.image_url }}" alt="user image" class="timeline-image">
-      </a>
+        <a href="/users/{{ user.id }}">
+          <img src="{{ user.image_url }}" alt="user image" class="timeline-image">
+        </a>
 
-      <div class="message-area">
-        <a href="/users/{{ user.id }}">@{{ user.username }}</a>
-        <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
-        <p>{{ message.text }}</p>
-        {% if message.user_id != g.user.id%}
-        <form method="POST" action="/users/add_like/{{ message.id }}" id="messages-form">
-          <button class="
+        <div class="message-area">
+          <a href="/users/{{ user.id }}">@{{ user.username }}</a>
+          <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
+          <p>{{ message.text }}</p>
+          {% if message.user_id != g.user.id%}
+          <form method="POST" action="/users/add_like/{{ message.id }}" id="messages-form">
+            <button class="
                   btn 
                   btn-sm 
                   {{'btn-primary' if message in g.user.likes else 'btn-secondary'}}">
-            <i class="fa fa-thumbs-up"></i>
-          </button>
-        </form>
-        {% endif %}
-      </div>
+              <i class="fa fa-thumbs-up"></i>
+            </button>
+          </form>
+          {% endif %}
+        </div>
+      </a>
     </li>
 
     {% endfor %}
